# pdlc-projects

./: .gitignore  CalculatorApp.js  CalculatorApp.test.js  GameLevel.js  PDLC-30-test-report.md  PDLC-50-test-report.md  PDLC-53-test-report.md  PDLC-58-test-report.md  README.md  cucumber.js  main.js  main.py  package-lock.json  package.json  playwright.config.js  test_main.py
code/: .env.example  .eslintrc.json  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.json  README.md  docker-compose.yml  go.mod  main.go  main_test.go  package.json  pyproject.toml  requirements.txt  tsconfig.json
code/src/: index.ts  main.py
code/src/middleware/: errorHandler.ts
code/src/utils/: logger.ts
code/tests/: health.test.ts  test_health.py
features/: user_story.feature
features/step_definitions/: user_story.steps.js
pages/: noteList.page.js  welcome.page.js
src/: feature.js  feature.py  main.js
system-of-records/adrs/: ADR-PDLC-11.md  ADR-PDLC-17.md  ADR-PDLC-24.md  ADR-PDLC-45.md  ADR-PDLC-52.md  ADR-PDLC-58.md
system-of-records/prds/: PRD-PDLC-11.md  PRD-PDLC-17.md  PRD-PDLC-24.md  PRD-PDLC-45.md  PRD-PDLC-52.md  PRD-PDLC-58.md
tests/: feature.test.js  package-lock.json  package.json  test_feature.py
tests/playwright/: Account_Creation_with_Valid_Email.spec.ts  Account_Creation_with_Valid_Email_and_Password.spec.ts  Sign-Up_with_Valid_Email_and_Password.spec.ts  Sign-up_with_valid_email_and_strong_password.spec.ts  Sign_Up_with_Valid_Email_and_Password.spec.ts  Successful_Sign-Up_with_Valid_Email_and_Password.spec.ts  Successful_User_Sign-Up.spec.ts  (+11 more)
(+148 files in other folders)
